tests/valid/variables/rsi_unused_variable.rs
/*
executionExitCode: 1
*/

main(): i32 {
    flag: i64 = 1;
    a: i64 = 0;
    return flag;
}