tests/invalid/character_literals/escaped_end_quote.rs
/*
compilationExitCode: 1
*/

main(): i32{
    char: i8 = '\';
    return 0;
}